--- a/garbage/garbage_muko2.html
+++ b/garbage/garbage_muko2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MUKO2 ゴミ出しスケジュール</title>
+    <title>MUKO2 今日のゴミ出し</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>MUKO2 ゴミ出しスケジュール</h1>
+    <h1>MUKO2 今日のゴミ出し</h1>
     <h2 id="todayInfo"></h2>
     <h2 id="tomorrowInfo"></h2>
 
