--- a/0_todo/ToDo2_list.html
+++ b/0_todo/ToDo2_list.html
@@ -36,7 +36,7 @@
                 };
             },
             mounted() {
-                const savedTodos = localStorage.getItem('todos');
+                const savedTodos = localStorage.getItem('todos2');
                 if (savedTodos) {
                     this.todos = JSON.parse(savedTodos);
                 }
