--- a/0_todo/QA2_list.html
+++ b/0_todo/QA2_list.html
@@ -36,7 +36,7 @@
                 };
             },
             mounted() {
-                const savedQAs = localStorage.getItem('qas');
+                const savedQAs = localStorage.getItem('qas2');
                 if (savedQAs) {
                     this.qas = JSON.parse(savedQAs);
                 }
