--- a/4_newline/newline.html
+++ b/4_newline/newline.html
@@ -28,7 +28,7 @@
             const inputText = document.getElementById('inputText').value;
 
             // 日本語の「。」と英語の「.」で分割し、空の段落を除外
-            const paragraphs = inputText.split(/。|\.|[\r\n]+/).filter(paragraph => paragraph.trim() !== "");
+            const paragraphs = inputText.split(/(?<!\w)[。\.](?!\w)/).filter(paragraph => paragraph.trim() !== "");
 
             // 各段落の後に改行を追加
             const formattedText = paragraphs.join('\n\n');
@@ -39,4 +39,5 @@
     </script>
 </body>
 </html>
+
 
