--- a/4_newline/newline.html
+++ b/4_newline/newline.html
@@ -27,11 +27,8 @@
             // テキストエリアから入力を取得
             const inputText = document.getElementById('inputText').value;
 
-            // 日本語の「。」と英語の「.」で分割し、空の段落を除外
-            const paragraphs = inputText.split(/(?<!\w)[。\.](?!\w)/).filter(paragraph => paragraph.trim() !== "");
-
-            // 各段落の後に改行を追加
-            const formattedText = paragraphs.join('\n\n');
+            // 「。」または「.」の後に改行を追加し、句読点を残す
+            const formattedText = inputText.replace(/([。\.])\s*/g, '$1\n');
 
             // 結果を表示
             document.getElementById('output').textContent = formattedText;
