--- a/1_garbage/garbage3_muko2.html
+++ b/1_garbage/garbage3_muko2.html
@@ -14,6 +14,20 @@
             font-size: 1.5em;
         }
     </style>
+
+<link rel="manifest" href="/manifest.json">
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+        console.log('Service Worker registered with scope:', registration.scope);
+      }, function(error) {
+        console.log('Service Worker registration failed:', error);
+      });
+    });
+  }
+</script>
+
 </head>
 
 <body>
