--- a/1_garbage/garbage3_muko2.html
+++ b/1_garbage/garbage3_muko2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>今日のゴミ出し</title>
+    <title>PWA 今日のゴミ出し</title>
     <style>
         body {
             font-family: Arial, sans-serif;
