--- a/7_polygon_map/leaflet.html
+++ b/7_polygon_map/leaflet.html
@@ -18,7 +18,7 @@
         }).addTo(map);
 
         // Google Apps ScriptのURL
-        fetch('https://script.google.com/macros/s/AKfycbxvLCORafD-bNLpOMPhH0IcKKvPih4RmQMfyehU7GhxTpbDMHCaZF1_Cj7GvYhY5ZkeMA/exec')
+        fetch('https://script.google.com/macros/s/xxxxx/exec')
             .then(response => response.json())
             .then(data => {
                 L.geoJSON(data).addTo(map);
