--- a/8_csv_fig/show_gssWgasjson.html
+++ b/8_csv_fig/show_gssWgasjson.html
@@ -7,35 +7,35 @@
     <title>Stock Data Chart</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        // Google Sheets APIの設定
-        const API_KEY = 'YOUR_API_KEY';  // ここにGoogle Sheets APIキーを入力
-        const SHEET_ID = '15DK7WIsMZXLVl5iCuJAgZ8l_IDgzMXZmUih0_4Vl3zc'; // ここにGoogle SheetsのIDを入力
-        const RANGE = 'Sheet1!A:B'; // スプレッドシートのシート名と範囲を指定
+        const apiUrl = 'https://script.google.com/macros/s/AKfycbxKciVpo9fkPyzDlmjNlnCNPVQpmjZeuIEiu64vmOHrBXADFti4wR9v_Obb1jFrY8yraw/exec'; // Google Apps ScriptのURL,getjson
 
-        async function fetchSheetData() {
-            const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`;
-            const response = await fetch(url);
-            const data = await response.json();
-            return data.values;
-        }
-
-        function parseSheetData(sheetData) {
-            const dates = [];
-            const opens = [];
-
-            sheetData.forEach((row, index) => {
-                if (index === 0) return; // ヘッダー行をスキップ
-                const [date, open] = row;
-                if (date && open) {
-                    dates.push(date);
-                    opens.push(parseFloat(open));
+        async function fetchJSONData() {
+            try {
+                const response = await fetch(apiUrl);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
                 }
-            });
-
-            return { dates, opens };
+                const data = await response.json();
+                return data;
+            } catch (error) {
+                console.error('Error fetching JSON data:', error);
+                return [];
+            }
         }
 
-        function createChart(dates, opens) {
+        function formatDateString(dateString) {
+            const date = new Date(dateString);
+            // 日付部分のみを取得（年-月-日）
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0'); // 月は0始まりなので+1
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }
+
+        function createChart(data) {
+            const dates = data.map(item => formatDateString(item.date));
+            const opens = data.map(item => item.open);
+
             const ctx = document.getElementById('myChart').getContext('2d');
             new Chart(ctx, {
                 type: 'line',
@@ -56,6 +56,10 @@
                             title: {
                                 display: true,
                                 text: 'Date'
+                            },
+                            ticks: {
+                                autoSkip: true, // 自動的に間引く
+                                maxTicksLimit: 10, // 表示する最大の目盛り数を設定
                             }
                         },
                         y: {
@@ -71,9 +75,10 @@
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
-            const sheetData = await fetchSheetData();
-            const { dates, opens } = parseSheetData(sheetData);
-            createChart(dates, opens);
+            const jsonData = await fetchJSONData();
+            if (jsonData.length) {
+                createChart(jsonData);
+            }
         });
     </script>
 </head>
