--- a/8_csv_fig/show_gssWapikey.html
+++ b/8_csv_fig/show_gssWapikey.html
@@ -9,7 +9,7 @@
     <script>
         // Google Sheets APIの設定
         const API_KEY = 'YOUR_API_KEY';  // ここにGoogle Sheets APIキーを入力
-        const SHEET_ID = '15DK7WIsMZXLVl5iCuJAgZ8l_IDgzMXZmUih0_4Vl3zc'; // ここにGoogle SheetsのIDを入力
+        const SHEET_ID = 'xxxxx'; // ここにGoogle SheetsのIDを入力
         const RANGE = 'Sheet1!A:B'; // スプレッドシートのシート名と範囲を指定
 
         async function fetchSheetData() {
