--- a/8_csv_fig/show_gssWgascsv.html
+++ b/8_csv_fig/show_gssWgascsv.html
@@ -9,7 +9,7 @@
     <script>
         async function fetchCSVData() {
             try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbxvDElNuDJ94ZL8nW8GA6l7URfwS30Dp5zAAmKOC4yYyttw-FissdBnPQDfriajVvqd/exec'); // GASでデプロイしたWebアプリのURLを指定
+                const response = await fetch('https://script.google.com/macros/s/xxxxx/exec'); // GASでデプロイしたWebアプリのURLを指定
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
