--- a/8_csv_fig/show_gssWgasjson.html
+++ b/8_csv_fig/show_gssWgasjson.html
@@ -7,7 +7,7 @@
     <title>Stock Data Chart</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        const apiUrl = 'https://script.google.com/macros/s/AKfycbxKciVpo9fkPyzDlmjNlnCNPVQpmjZeuIEiu64vmOHrBXADFti4wR9v_Obb1jFrY8yraw/exec'; // Google Apps ScriptのURL,getjson
+        const apiUrl = 'https://script.google.com/macros/s/xxxxx/exec'; // Google Apps ScriptのURL,getjson
 
         async function fetchJSONData() {
             try {
