--- a/a_checkbox/checkbox.html
+++ b/a_checkbox/checkbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>チェック表生成</title>
+    <title>チェック表生成 with LocalStorage</title>
     <style>
         table {
             border-collapse: collapse;
