--- a/a_checkbox/checkbox.html
+++ b/a_checkbox/checkbox.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>チェック表生成</h1>
+    <h1>チェック表生成LS</h1>
     
     <textarea id="textbox" rows="4" placeholder="項目を入力してください（各行が項目になります）"></textarea>
     <br><br>
