--- a/a_checkbox/checkbox.html
+++ b/a_checkbox/checkbox.html
@@ -31,14 +31,13 @@
     </style>
 </head>
 <body>
-    <h1>チェック表生成LS</h1>
+    <p>チェック表LS</p>
     
-    <textarea id="textbox" rows="4" placeholder="項目を入力してください（各行が項目になります）"></textarea>
+    <textarea id="textbox" rows="3" placeholder="項目を入力してください"></textarea>
     <br><br>
     <button onclick="generateTable()">生成</button>
     <button onclick="resetTable()">リセット</button>
     
-    <h2>チェック表</h2>
     <div id="tableContainer"></div>
 
     <script>
