--- a/a_checkbox/checkbox.html
+++ b/a_checkbox/checkbox.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <p>チェック表LS</p>
+    <p>Check Box LS</p>
     
     <textarea id="textbox" rows="3" placeholder="項目を入力してください"></textarea>
     <br><br>
