--- a/d_canvas/canvas03.html
+++ b/d_canvas/canvas03.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h1>お絵描きキャンバス</h1>
+    <p>お絵描きキャンバス</p>
     <canvas id="drawingCanvas"></canvas>
     <div id="controls">
         <button id="eraser">消しゴム</button>
