--- a/f_isis_map/index.html
+++ b/f_isis_map/index.html
@@ -45,7 +45,8 @@
         // ISSの位置データをAPIから取得する関数
         async function fetchISSData() {
             try {
-                const response = await fetch('https://api.open-notify.org/iss-now.json');
+                const response = await fetch('https://api.open-notify.org/iss-now.json'); // https
+                
                 const data = await response.json();
                 const { latitude, longitude } = data.iss_position;
                 const timestamp = new Date(data.timestamp * 1000).toLocaleString(); // タイムスタンプを日時形式に変換
@@ -70,7 +71,7 @@
         }
 
         // 位置データを定期的に更新
-        setInterval(fetchISSData, 5000);
+        setInterval(fetchISSData, 10000);
 
         // 初回データ取得
         fetchISSData();
