--- a/f_isis_map/index.html
+++ b/f_isis_map/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
         #map {
-            height: 80v%;
+            height: 85vh;
         }
 
         #info {
