--- a/h_USDJPY_fig/index.html
+++ b/h_USDJPY_fig/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>USDJPY Price Chart</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script> <!-- 日付アダプターの追加 -->
+</head>
+
+<body>
+    <p>USDJPY 現在の価格</p>
+    <canvas id="bitcoinChart" width="400" height="200"></canvas>
+    <script src="script.js"></script>
+</body>
+
+</html>
