--- a/h_USDJPY_fig/index.html
+++ b/h_USDJPY_fig/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <p>USDJPY 現在の価格</p>
-    <canvas id="bitcoinChart" width="400" height="200"></canvas>
+    <canvas id="usdjpyChart" width="400" height="200"></canvas>
     <script src="script.js"></script>
 </body>
 
