--- a/f_iss_map/index.html
+++ b/f_iss_map/index.html
@@ -18,6 +18,12 @@
             font-family: Arial, sans-serif;
         }
     </style>
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@IshiiStpete" />
+    <meta name="twitter:title" content="trace ISS">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/tztechno/tz_html_works/main/f_iss_map/iss2.png">
+    
 </head>
 
 <body>
