--- a/j_custom_graph/graph3.html
+++ b/j_custom_graph/graph3.html
@@ -157,19 +157,29 @@
             });
         }
 
+        // タイトルをLocalStorageに保存する関数
+        function saveTitle(key, title) {
+            localStorage.setItem(key + '_title', title);
+        }
+
+        // タイトルをLocalStorageから取得する関数
+        function getTitle(key) {
+            return localStorage.getItem(key + '_title') || key;
+        }
+
         // ページが読み込まれたときにグラフを初期化
         window.onload = function () {
             // グラフA（体重）の初期化
             const ctxA = document.getElementById('chartA').getContext('2d');
-            const chartA = createChart(ctxA, 'A');
+            const chartA = createChart(ctxA, getTitle('A'));
 
             // グラフB（株価）の初期化
             const ctxB = document.getElementById('chartB').getContext('2d');
-            const chartB = createChart(ctxB, 'B');
+            const chartB = createChart(ctxB, getTitle('B'));
 
             // グラフC（順位）の初期化
             const ctxC = document.getElementById('chartC').getContext('2d');
-            const chartC = createChart(ctxC, 'C');
+            const chartC = createChart(ctxC, getTitle('C'));
 
             // 各グラフの更新
             updateChart(chartA, 'dataA');
@@ -234,6 +244,7 @@
             document.getElementById('updateTitleButton1').addEventListener('click', function () {
                 const newTitle = document.getElementById('titleInput1').value;
                 chartA.options.plugins.title.text = newTitle || 'A';
+                saveTitle('A', newTitle || 'A');
                 chartA.update();
             });
 
@@ -241,6 +252,7 @@
             document.getElementById('updateTitleButton2').addEventListener('click', function () {
                 const newTitle = document.getElementById('titleInput2').value;
                 chartB.options.plugins.title.text = newTitle || 'B';
+                saveTitle('B', newTitle || 'B');
                 chartB.update();
             });
 
@@ -248,6 +260,7 @@
             document.getElementById('updateTitleButton3').addEventListener('click', function () {
                 const newTitle = document.getElementById('titleInput3').value;
                 chartC.options.plugins.title.text = newTitle || 'C';
+                saveTitle('C', newTitle || 'C');
                 chartC.update();
             });
         }
